2007-03-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Don't require 'tramp-cache, it results in an
	endless loop.  Autoload needed functions instead of.  Declare
	needed gateway symbols, when tramp-gw cannot be loaded.
	(with-parsed-tramp-file-name): Simplify `edebug-form-spec'.
	(with-file-property, with-connection-property): New defmacros,
	moved from tramp-cache.  This was necessary, because macros cannot
	be autoloaded.
	(tramp-register-file-name-handler)
	(tramp-register-completion-file-name-handler): New defsubst,
	derived from `tramp-register-file-name-handlers'.  The split is
	necessary because Tramp's file name handlers must be registered at
	different startup places.

	* tramp-cache.el (with-file-property, with-connection-property):
	Move them to tramp.el.

2007-03-31  Joachim Schrod  <jschrod@acm.org>  (tiny change)

	* tramp.el (tramp-completion-mode): `last-input-event' may have no
	character approximation.

2007-03-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-expand-file-name): Don't apply
	`tramp-drop-volume-letter' for non-Tramp files.

2007-03-25  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in: Add gateway support.

	* tramp.el (top): Require tramp-gw conditionally only.
	(tramp-methods): Add port spec to "plink", "plink1" and "pscp"
	methods.

2007-03-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-auto-save-file-name): Apply
	`tramp-temporary-file-directory' for compatibility reasons.

2007-03-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-directory-files-and-attributes-with-stat)
	(tramp-handle-file-name-all-completions): Add "-b" to the "ls"
	command in order to handle file names with spaces.

2007-03-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Extend doc string by description of
	`tramp-default-port' and `tramp-gw-args'.
	(tramp-enter-password): Remove `inhibit-trace'.  It is handled by